--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-<p>RACHEL HILL</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet"
+    type="text/css"
+    href="style.css">
+    <title>BabyFeed</title>
+  </head>
+
+<body>
+
+        <header>
+          <p id="title">Why is my one year old climing the pantry?The answer may surprise you</p>
+        </header>
+        <main>
+        <img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/19106035_10155469143174312_6747018434086425540_n.jpg?oh=9bb4696abe5c7987769a5dcfddeda713&oe=59E6636E"/>
+        <div class="bluebox">Patrick has been pushing boundaries since the beginning.</div>
+        <p class="bodytext">There he is at five days old breaking out of a zipped up swaddle. The swaddle is marketed as being unbreakable by the most Houdini of babies...we considered asking for our money back.</p>
+        <img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/19113534_10155469113944312_8506343156437813018_n.jpg?oh=7154e60ad63b2fec1883909df347161b&oe=59D90E75"/>
+        <div class="bluebox">He's never seemed to understand that he's small. He has always been able to express his big personality</div>
+        <p class="bodytext">At three months old he decided that not being able to walk or crawl would not stop him from chasing the cat...</p>
+
+        <p class="bodytext">and he's been trying to pet him ever since!</p>
+<img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/19113904_10155469197584312_1720475445308999119_n.jpg?oh=012fb49e936de006fa82f8bdd520c1b6&oe=59A540D8"/>
+        <div class="bluebox">As he grew his tricks became increasingly impressive.</div>
+        <p class="bodytext">His first tricks included transforming into various animals...</p>
+        <img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/19059549_10155469117774312_2231988978396927370_n.jpg?oh=7626847f1371ad2cc6b9815edd5a4dc2&oe=59E6FF1F"/>
+        <p class="bodytext">acting as a wifi hotspot...</p>
+        <img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/19059542_10155469119379312_3279178096855994907_n.jpg?oh=499dccdac85d8d52b15942454d6af6dd&oe=59DAEC94"/>
+        <p class="bodytext">eating giant pancakes in one sitting...</p>
+<img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/19225090_10155469127154312_3033452248712452250_n.jpg?oh=31dd112739ab73ebc827482b61bd973e&oe=59E8BFBB"/>
+        <p class="bodytext">and being an award winning Top Gun impersonator.</p>
+<img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/19148947_10155469125704312_3630052389359963307_n.jpg?oh=9f4085b95d61c9ccc215afaeecbd0d50&oe=59D60744"/>
+        <div class="bluebox">But the good times came to a halt during his 6 month life crisis.</div>
+        <p class="bodytext">He had to take a step back and take a good hard look at himself.</p>
+<img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/19105627_10155469123024312_1548901683965563043_n.jpg?oh=2c96f8b89ae6998cfdcc985b48ee5c97&oe=59A690F5"/>
+        <p class="bodytext">He saught cousil from his wise puppy friend, Layla, then all was right in the world of Little Patrick.</p>
+<img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/19059323_10155469121879312_9057600738397166726_n.jpg?oh=9a3c600c0b2930b16750e5f779e4125d&oe=59A47E16"/>
+        <div class="bluebox">Patrick quickly got back on his feet...</div>
+        <p class="bodytext">and decided to form his own company specializing in wifi hotspots.
+        He spent months networking...</p>
+<img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/19059404_10155469198399312_1559006663033632561_n.jpg?oh=7ac08870808a697f8a79bd0b48eeb21c&oe=59DC1F53"/>
+        <p class="bodytext">and plannning.</p>
+<img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/18814186_10155469191059312_174971019593434987_n.jpg?oh=7843fea37a2b378dac1d34e598eec553&oe=59D7CB65"/>
+        <div class="bluebox">Eventually his hard work paid off and he was able to successfully start his business!</div>
+        <p class="bodytext">Here he is utilizing his climbing abilities to assess proper instalation of his product.</p>
+        </main>
+<img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/19148895_10155469194694312_5526691789471948344_n.jpg?oh=34a69d7134fbbdaf5cbfc681abb9be63&oe=59E34D04"/>
+        <div class="pinkbox">
+        <article>
+          <h1>Purchasing WeeWIFI</h1>
+          <p>You can purchase his products and services from his webpage <a href="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/19225431_10155472686539312_4358848232951991048_n.jpg?oh=e3b297c8d5b8d16bcedbe7ddf3a5ac47&oe=599C6F36" target="_blank">WEEWifi</a></p>
+        </article>
+        </div>
+
+        <div class="bluebox">Remember to support local business and shop smol!</div>
+
+<footer>
+      <p>Created by: Rachel Hill&copy;</p>
+      <p>Contact information: <a href="mailto:patricklee@patrick.com">
+      mailto:patricklee@patrick.com</a>.</p>
+</footer>
+</body>
