--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/19113534_10155469113944312_8506343156437813018_n.jpg?oh=7154e60ad63b2fec1883909df347161b&oe=59D90E75"/>
         <div class="bluebox">He's never seemed to understand that he's small. He has always been able to express his big personality</div>
         <p class="bodytext">At three months old he decided that not being able to walk or crawl would not stop him from chasing the cat...</p>
-
+<img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/19059591_10155469120564312_3138439246956121168_n.jpg?oh=c5cf344f9193e7201350aedcc758fba8&oe=59CED752"/>
         <p class="bodytext">and he's been trying to pet him ever since!</p>
 <img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/19113904_10155469197584312_1720475445308999119_n.jpg?oh=012fb49e936de006fa82f8bdd520c1b6&oe=59A540D8"/>
         <div class="bluebox">As he grew his tricks became increasingly impressive.</div>
